relatively stable release 1.3a5.  It works towards the new stable
release 1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree.

Version 1.3.6  (not yet released)
=============

6/20/2001: cheetah (william fulton)
	   * Makefile mods so that 'make check' uses the swig options in the makefiles
	   * [Java] Removed Generating wrappers message
	   * [Java] NULL pointer bug fix
	   * [Java] Bug fix for Kaffe JVM

6/20/2001: mkoeppe
	   * SWIG_TypeQuery from common.swg now returns a
	   swig_type_info* rather than a void*.  This fixes a problem
	   when using pointer.i and C++, as illustrated by the new
	   test-suite example perl5/pointer-cxx.
	   * Portability fixes (const char *). 
	   * Incorporated build changes contributed by Wyss Clemens
	   <WYS@helbling.ch>, which make swig runnable on cygwin.

6/19/2001: cheetah (william fulton)
	   * [Java] Bug fix for SF bug #211144. This fix is a workaround 
	     until fixed in the core.

6/19/2001: mkoeppe
	   * [Guile]: Portability fixes for use with the Sun Forte
	   compilers. 
	   * [Tcl]: Portability fix (const char *).
	   * [Tcl]: Configure now first tries to find a tclConfig.sh
	   file in order to find the Tcl include directory, library
	   location and library name.
	   * [Python]: Added a few possible library locations.

6/18/2001: mkoeppe
	   * [Guile]: Don't call scm_c_export if nothing is to be
	     exported.  Don't warn on %module if module has been set
	     already (this frequently occurs when %import is used).

6/16/2001: mkoeppe
	   * [Guile]: New "passive" linkage, which is appropriate for
	     multi-module extensions without Guile module magic.

6/15/2001: mkoeppe
	   * [Guile]: Fixed printing of smobs (space and angle were
	     missing). 
	   * Properly generate type information for base classes